sections retailed, one section layout

--- a/index.html
+++ b/index.html
@@ -8,30 +8,19 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class="buttons-l">
-        <div class="section-l">
-          <canvas id="myCanvas1" data-color="#A7DBD8" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas2" data-color="#E0E4CC" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas3" data-color="#F38630" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas4" data-color="#FA6900" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas5" data-color="#C02942" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas6" data-color="#542437" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas7" data-color="#53777A" resize="true" class="canvas-section-e"></canvas>
-        </div>
-        <div class="section-l">
-          <canvas id="myCanvas8" data-color="#ECD078" resize="true" class="canvas-section-e"></canvas>
+      <div class="menu-l">
+        <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" resize="true" class="canvas-e"></canvas>
+        <div id="js-content" class="content-ll"> 
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
+          <div class="section-b"></div>
         </div>
       </div>
     </div>
@@ -41,15 +30,7 @@
     <script type="text/javascript" src="js/tween.min.js"></script>
     <script type="text/javascript" src="js/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/paper.js"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas0"></script>
     <script type="text/paperscript" src="js/main.js" canvas="myCanvas1"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas2"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas3"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas4"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas5"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas6"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas7"></script>
-    <script type="text/paperscript" src="js/main.js" canvas="myCanvas8"></script>
     <script type="text/javascript" src="js/after.js"></script>
   </body>
 </html>
