--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" resize="true" class="canvas-e"></canvas>
         <div id="js-content" class="content-ll">
           <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
-          <div class="section-b"></div>
+          <div class="section-b is-watermellon"></div>
+          <div class="section-b is-fish"></div>
+          <div class="section-b is-donut"></div>
+          <div class="section-b is-icecreame"></div>
+          <div class="section-b is-bananas"></div>
+          <div class="section-b is-drink"></div>
+          <div class="section-b is-candies"></div>
+          <div class="section-b is-pizza"></div>
+          <div class="section-b is-china"></div>
         </div>
       </div>
     </div>
