Revert "фвв куышяу дщпшс"
This reverts commit 477238588ea6d2ea3ec00a488f850efd9080f8dc.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="wrapper">
       <div class="menu-l">
-        <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" class="canvas-e"></canvas>
+        <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" resize="true" class="canvas-e"></canvas>
         <div id="js-content" class="content-ll">
           <div class="section-b"></div>
           <div class="section-b is-watermellon"></div>
@@ -31,7 +31,6 @@
     <script type="text/javascript" src="js/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/paper.js"></script>
     <script type="text/paperscript" src="js/main.js" canvas="myCanvas1"></script>
-    <script type="text/javascript" src="js/jq-events.js"></script>
     <script type="text/javascript" src="js/after.js"></script>
   </body>
 </html>
