--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
   </head>
   <body>
-    <div id="wrapper">
-      <div class="menu-l">
-        <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" class="canvas-e"></canvas>
-        <div id="js-content" class="content-ll">
-          <div class="section-b"></div>
-          <div class="section-b is-watermellon"></div>
-          <div class="section-b is-fish"></div>
-          <div class="section-b is-donut"></div>
-          <div class="section-b is-icecreame"></div>
-          <div class="section-b is-bananas"></div>
-          <div class="section-b is-drink"></div>
-          <div class="section-b is-candies"></div>
-          <div class="section-b is-pizza"></div>
-          <div class="section-b is-china"></div>
+    <div class="iphone-l">
+      <div class="screen-ll">
+        <div id="wrapper">
+          <div class="menu-l">
+            <canvas data-colors="#69D2E7:#A7DBD8:#E0E4CC:#F38630:#FA6900:#C02942:#542437:#53777A:#ECD078:#FE4365" data-sectionHeight="200" data-contentId="js-content" id="myCanvas1" class="canvas-e"></canvas>
+            <div id="js-content" class="content-ll">
+              <div class="section-b"></div>
+              <div class="section-b is-watermellon"></div>
+              <div class="section-b is-fish"></div>
+              <div class="section-b is-donut"></div>
+              <div class="section-b is-icecreame"></div>
+              <div class="section-b is-bananas"></div>
+              <div class="section-b is-drink"></div>
+              <div class="section-b is-candies"></div>
+              <div class="section-b is-pizza"></div>
+              <div class="section-b is-china"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
