add scroll suggest, minor refactoring

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
   </head>
   <body>
+    <div class="suggest-l"></div>
     <div class="iphone-l">
       <div class="screen-ll">
         <div id="wrapper">
@@ -30,7 +31,7 @@
     </div>
     <script type="text/javascript" src="js/lib/jquery-2.0.1.js"></script>
     <script type="text/javascript" src="js/iscroll.js"></script>
-    <script type="text/javascript" src="js/modernizr.js"></script>
+    <script type="text/javascript" src="js/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="js/tween.min.js"></script>
     <script type="text/javascript" src="js/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/paper.js"></script>
